// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button with dark theme renders with no errors 1`] = `
<DocumentFragment>
  <button
    class="sc-AxjAm glKCZb"
    name="button"
  >
    Dark
  </button>
</DocumentFragment>
`;

exports[`Button with light theme renders with no errors 1`] = `
<DocumentFragment>
  <button
    class="sc-AxjAm gTiQGs"
    name="button"
  >
    Light
  </button>
</DocumentFragment>
`;
